MediaRecorder: only announce h264/avc1 support if RTC_USE_H264

Support for AVC1 encoding (a.k.a. H264) is dependent on RTC_USE_H264 [1],
but due to an omission, this was not tested when enumerating the video
codecs. This CL fixes that.

[1] https://cs.chromium.org/chromium/src/third_party/webrtc/webrtc.gni?type=cs&q=rtc_use_h264&sq=package:chromium&g=0&l=156

TBR=emircan@chromium.org

Bug: 809980, 719023
Change-Id: I03a375b269b042cb8cf64680153b878f60ea723f
Reviewed-on: https://chromium-review.googlesource.com/c/1395887
Commit-Queue: Miguel Casas <mcasas@chromium.org>
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620078}
Former-commit-id: 919d2dee2bb2c4e6f9cbffdf94265378c312ffb0